新服务 NominationService 后台完成，弃用 QQMsgUtil.sendImage，添加 Api